# dataclass_opt

./: .copier-answers.yml  .gitcommit  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
coverage/: tmp.html
credits/: index.html
dataclass_opt/: __init__.py
docs/: macros.py
docs/reference/: cli.md
license/: index.html
scripts/: setup.sh
search/: search_index.json
src/dataclass_opt/: __init__.py
tests/: __init__.py  test_dataclass_opt.py
