[tool.poetry]
authors = ["Kevin Squire <kevin.squire@gmail.com>"]
description = "Create command line argument parsers using dataclasses"
license = "MIT License"
name = "dataclass_opt"
version = "0.1.0"

[tool.poetry.dependencies]
inflection = "^0.5.1"
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.7.0"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-pudb = "^0.7.0"
rope = "^0.18.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = """
(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)
"""
include = ".pyi?$"
line-length = 100
target-version = ["py36"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.pylint]
max-line-length = 100
