[tool.poetry]
authors = ["Kevin Squire <kevin.squire@gmail.com>"]
description = "Create command line argument parsers using dataclasses"
license = "MIT License"
name = "dataclass_opt"
version = "0.3.0"

[tool.poetry.dependencies]
inflection = "^0.5.1"
python = ">=3.7.2,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-pudb = "^0.7.0"
rope = "^1.3.0"
pytest-cov = "^3.0.0"
mypy = "^0.971"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = """
(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)
"""
include = ".pyi?$"
line-length = 100
target-version = ["py36"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.pylint]
max-line-length = 100
